--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 <!--Main menu-->
                 <nav class="menu">
                     
-                    <ul class="menu-itens">
-                        <li>About</li>
-                        <li>Blog</li>
-                        <li>Portifolio</li>
-                        <li>Contact</li>
-                    </ul>
+                    <div class="menu-itens">
+                        <a href="#">About</a>
+                        <a href="#">Blog</>
+                        <a href="#">Portifolio</>
+                        <a href="#">Contact</>
+                    </div>
                 </nav>
                 <!--Main Text -->
                 <div class="main-text">
