--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                     
                     <div class="menu-itens">
                         <a href="#">About</a>
-                        <a href="#">Blog</>
-                        <a href="#">Portifolio</>
-                        <a href="#">Contact</>
+                        <a href="#">Blog</a>
+                        <a href="#">Portifolio</a>
+                        <a href="#">Contact</a>
                     </div>
                 </nav>
                 <!--Main Text -->
